# nyx-light-racunovodja

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  create_release.sh  deploy.sh  docker-compose.yml  install.py  install.sh  nyx-remote.py  pyproject.toml  requirements.txt  start.sh  stop.sh  update.sh
config/: com.nyxlight.racunovodja.plist  nginx.conf  nyx_light.yaml
dashboard/: index.html
deploy/: deploy_mac_studio.sh
docs/: API_v1.md  GAP_ANALYSIS_SPRINT8.md  GAP_ANALYSIS_TENA_BE.md  GAP_ANALYSIS_v3.md  GAP_ANALYSIS_v4_FINAL.md  MASTER_BLUEPRINT.md  SPRINT17_CHANGELOG.md
scripts/: backup.py  first_boot.py  ingest_laws.py  nightly_dpo.py
static/: index.html
tests/: test_api_e2e.py  test_api_extended.py  test_api_production.py  test_bank_parser.py  test_devops.py  test_e2e.py  test_erp_connector.py  test_full_suite.py  test_memory.py  test_moe_memory.py  test_ocr_v2.py  test_overseer.py  test_rag_ingest.py  test_security.py  test_sprint11.py  test_sprint12_deploy.py  test_sprint13_deploy_eu.py  test_sprint14_verification.py  test_sprint15_math_vs_ai.py  test_sprint16_math_vs_ai.py  test_sprint17.py  test_sprint18.py  test_sprint19_fixes.py  test_sprint20_enterprise.py  test_sprint21_universal_parser.py  test_sprint22_deployment.py  test_sprint23_five_modules.py  test_sprint23_network.py  test_sprint24_integration.py  test_sprint25_frontend.py  test_sprint27_dpo_cards.py  test_sprint6_modules.py  test_sprint7_e2e.py  test_sprint7_pipeline.py  test_sprint8_final.py  test_sprint8_persistence.py  (+1 more)
(+167 files in other folders)
