[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nyx-light-racunovodja"
version = "2.0.0"
description = "Privatni ekspertni AI sustav za računovodstvo i knjigovodstvo RH — 36 modula, dvosmjerna ERP integracija (CPP/Synesis)"
authors = [{name = "Dr. Mladen Mešter", email = "mladen@nexellum.com"}]
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "aiofiles>=24.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-dateutil>=2.9.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.25.0",
    "PyPDF2>=3.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosmtplib>=3.0.0",
    "imapclient>=3.0.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.19.0",
    "mlx-lm>=0.19.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6.0",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
